# mdlcalc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: bottles.yml  release.yml
Formula/: mdlcalc.rb
scripts/: update_formula.py
src/mdlcalc/: __main__.py  calc.py  cli.py
tests/: test_calc.py
