[project]
name = "mdlcalc"
version = "0.1.0"
description = "Calculate approximate memory requirements for LLM inference"
readme = "README.md"
requires-python = ">=3.12"
license = "CC-BY-NC-SA-4.0"
dependencies = [
    "click>=8.3",
]

[project.scripts]
mdlcalc = "mdlcalc.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdlcalc"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.15",
]
